ui_tests/tests/should-fail/2_4-bad-construct.stderr
error: unexpected end of input, expected `as`
 --> tests/should-fail/2_4-bad-construct.rs:3:1
  |
3 | #[mod_template::define(define_foo; constructions(CONS))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `mod_template::define` (in Nightly builds, run with -Z macro-backtrace for more info)
